src/test/deca/context/invalid/decaObjet/method/16unknownMethod.deca
// Description:
// Test d'un appel de méthode de non définie
//
// Resultats:
//     16unknownMethod.deca:15:6:
//
// Historique:
//    crée le 16/06/2022

class A {
}

{
    A a = new A();
    a.methode();
}